--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/chai": "^4.2.14",
     "@types/jquery": "^3.5.5",
     "@types/node": "^14.14.16",
-    "chai": "^4.2.0",
     "jest": "^26.6.3",
     "mocha": "^8.2.1"
   },
@@ -19,7 +18,9 @@
     "test": "jest "
   },
   "jest": {
-    "setupFiles": ["./test/setup.js"]
+    "setupFiles": [
+      "./test/setup.js"
+    ]
   },
   "repository": {
     "type": "git",
